# helicon

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml  generate_matrix.py
.github/workflows/: build.yml  dependabot-auto-merge.yaml  pre-commit.yml
assets/: helicon.asciinema  mapping.tsv
src/: cache.rs  config.rs  coverart.rs  default_config.toml  distance.rs  error.rs  import.rs  lib.rs  lookup.rs  main.rs  media.rs  musicbrainz.rs  pathformat.rs  release.rs  release_candidate.rs  scanner.rs  taggedfile.rs  taggedfilecollection.rs  track.rs  util.rs
src/analyzer/: chromaprint.rs  ebur128.rs  mod.rs  soundtouch_bpm.rs  track_length.rs
src/cli/: analyze.rs  cache.rs  config.rs  import.rs  mod.rs  ui.rs
src/cli/ui/: handle_candidate.rs  mod.rs  select_candidate.rs  util.rs
src/cli/ui/util/: layout.rs  mod.rs  styled_content.rs
src/distance/: difference.rs  mod.rs  release.rs  release_candidate.rs  string.rs  time.rs  track.rs
src/tag/: flac.rs  id3.rs  mod.rs
src/util/: fs.rs  keyed_binheap.rs  mod.rs  testing.rs  time.rs
tests/data/debug/tuxedo/: candidate_0.json  release.json
tests/data/media/picard-2.12.3/: track.flac  track.m4a  track.mp2  track.opus  track.wma  track.wv
tests/data/media/untagged/: track.flac  track.m4a  track.mp2  track.opus  track.wma  track.wv
tests/data/musicbrainz/: release.json
