[package]
name = "helicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0"
thiserror = "1"
unidecode = "0"
levenshtein = "1"
musicbrainz_rs_nova = { version = "0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
id3 = { version = "1", optional = true }
metaflac = { version = "0", optional = true }
futures = "0"
hungarian = "1"
chrono = { version = "0", features = [] }
num = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xdg = "2.5.2"
sha2 = "0.10.8"
inquire = "0.7.5"
crossterm = "0.28.1"
regex = "1.11.0"
similar = { version = "2.6.0", features = ["unicode"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
simplelog = "0.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
itertools = "0.13.0"
symphonia = "0.5.4"
rusty-chromaprint = "0.2.0"
base64 = "0.22.1"
float_eq = "1"
ebur128 = "0.1"
async-channel = "2.3.1"
num_cpus = "1.16.0"
handlebars = "6.1.0"

[dev-dependencies]
paste = "1"

[features]
default = ["flac", "id3"]
flac = ["dep:metaflac"]
id3 = ["dep:id3"]
