[package]
name = "helicon"
description = "Command line music organizer based on metadata from MusicBrainz."
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
readme = "README.md"
repository = "https://github.com/rust-lang/cargo"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["music", "tags", "organize", "musicbrainz", "metadata"]
categories = ["command-line-utilities", "multimedia::audio", ]
exclude = [".*", "assets"]

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0"
thiserror = "2"
unidecode = "0"
levenshtein = "1"
musicbrainz_rs_nova = { version = "0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
id3 = { version = "1", optional = true }
metaflac = { version = "0", optional = true }
futures = { version = "0", features = ["executor", "thread-pool"] }
hungarian = "1"
chrono = { version = "0", features = [] }
num = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xdg = "2.5.2"
sha2 = "0.10.8"
inquire = "0.7.5"
crossterm = "0.28.1"
regex = "1.11.1"
similar = { version = "2.7.0", features = ["unicode"] }
config = { version = "0.15.6", default-features = false, features = ["toml"] }
simplelog = "0.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
itertools = "0.14.0"
symphonia = { version = "0.5.4", features = ["all-formats", "all-codecs"] }
rusty-chromaprint = "0.3.0"
base64 = "0.22.1"
float_eq = "1"
ebur128 = "0.1"
async-channel = "2.3.1"
num_cpus = "1.16.0"
handlebars = "6.3.0"
tempfile = "3.20.0"
expanduser = "1.2.2"

[dev-dependencies]
paste = "1"

[features]
default = ["flac", "id3"]
dev = []
flac = ["dep:metaflac"]
id3 = ["dep:id3"]
